@@ -52,12 +52,14 @@ including a enhanced patchbay and connection control features.
 %dir %{_datadir}/icons/hicolor/32x32/apps
 %dir %{_datadir}/%{name}
 %dir %{_datadir}/%{name}/translations
+%dir %{_datadir}/appdata
 #dir %{_datadir}/man
 #dir %{_datadir}/man/man1
 %{_bindir}/%{name}
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/icons/hicolor/32x32/apps/%{name}.png
 %{_datadir}/%{name}/translations/%{name}_*.qm
+%{_datadir}/appdata/%{name}.appdata.xml
 %{_datadir}/man/man1/%{name}.1.gz
 
 %changelog
