@@ -95,7 +95,7 @@ unix {
 	DEFINES += DATADIR=\"$$DATADIR\"
 
 	# make install
-	INSTALLS += target desktop icon
+	INSTALLS += target desktop icon appdata
 
 	target.path = $$BINDIR
 
@@ -104,6 +104,9 @@ unix {
 
 	icon.path = $$DATADIR/icons/hicolor/32x32/apps
 	icon.files += images/$${TARGET}.png 
+
+	appdata.path = $${DATADIR}/appdata
+	appdata.files += appdata/$${TARGET}.appdata.xml
 }
 
 # XML/DOM support
